crates/carta/tests/snapshots/golden_writer__docbook__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="4">
    <colspec align="left" />
    <colspec align="right" />
    <colspec align="center" />
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          l
        </entry>
        <entry>
          r
        </entry>
        <entry>
          c
        </entry>
        <entry>
          d
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          1
        </entry>
        <entry>
          2
        </entry>
        <entry>
          3
        </entry>
        <entry>
          4
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
