crates/carta/tests/snapshots/golden_writer__docbook__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
  <title>First caption paragraph
  Second caption paragraph</title>
  <tgroup cols="1">
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          h
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          v
        </entry>
      </row>
    </tbody>
  </tgroup>
</table>
