crates/carta/tests/snapshots/golden_writer__docbook__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="2">
    <colspec align="left" />
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          product
        </entry>
        <entry>
          note
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          multi
          line cell
        </entry>
        <entry>
          plain
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
