crates/carta/tests/snapshots/golden_writer__docbook__table__table-cluster-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="5">
    <colspec align="left" />
    <colspec align="left" />
    <colspec align="left" />
    <colspec align="left" />
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          signs
        </entry>
        <entry>
          selector
        </entry>
        <entry>
          joined
        </entry>
        <entry>
          narrow
        </entry>
        <entry>
          mark
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          ⌚⭐✅
        </entry>
        <entry>
          ☀️1️⃣
        </entry>
        <entry>
          👨‍👩‍👧👍🏽
        </entry>
        <entry>
          ㉈゙
        </entry>
        <entry>
          ́abc
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
